@@ -1,3 +1,13 @@
+2006-11-23  Andrew Haley  <aph@redhat.com>
+
+	* expr.c (rewrite_arglist_getcaller): New.
+	(rewrite_arglist_getclass): Fix indentation.
+	(rules): Add gnu.classpath.VMStackWalker.getCallingClass() and 
+	gnu.classpath.VMStackWalker.getCallingClassLoader().
+	* builtins.c (initialize_builtins): Remove duplicate def'n of
+	__sync_synchronize.
+	Add __builtin_return_address.
+
 2006-11-22  Andrew Haley  <aph@redhat.com>
 
 	* jcf-reader.c (get_attribute): Mark attr_type unused.
